# beset

./: .coverage  .gitignore  LICENSE  license  makefile  pyproject.toml  readme.md  tox.toml
.github/workflows/: ci.yml
doc/: class-hierarchy.excalidraw
src/beset/: __init__.py  _display.py  _interval.py  _interval_data.py  _itertools.py  _operations.py  _protocol.py  bound.py  bounds.py  experiment.py  infinity.py  infinity.py.old  intersection.py  interval.py  metaclass_approach.py  metaclass_approach.py.txt  multi_interval.py  sortable.py
test/beset/: conftest.py  conftest.py.old  test_infinity.py  test_infinity.py.old  test_intersection.py  test_interval.py  test_interval_display.py  test_interval_mono.py  test_interval_multi.py  test_interval_set.py  test_itertools.py
tests/beset/: test_multi_interval.py
