[project]
name = "beset"
version = "0.1.0"
description = "Intervals as sets"
authors = [
    {name = "exoriente",email = "oosten@gmail.com"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "ty (>=0.0.42,<0.0.43)",
    "pyright (>=1.1.410,<2.0.0)"
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
