[project]
name = "beset"
version = "0.1.0"
description = "Immutable, typed intervals as sets"
authors = [
    {name = "Maarten Oosten",email = "oosten@gmail.com"}
]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = ["simpy (>=4.1.2,<5.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ty (>=0.0.42,<0.0.43)",
    "pyright (>=1.1.410,<2.0.0)",
    "pyrefly (>=1.0.0,<2.0.0)",
    "tox (>=4.55.1,<5.0.0)",
    "slotscheck (>=0.20.0,<0.21.0)"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true

[tool.pyrefly]
preset = "strict"

[tool.pyrefly.errors]
missing-override-decorator = false
